--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,16 @@
 .container {
     position: relative;
+    display: inline-block;
+}
+
+.container.loading::after {
+    content: "Scanning Image...";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    font-size: 4rem;
+    translate: -50% -50%;
+    animation: pulse 1s ease-in-out infinite;
 }
 
 .container>img {
@@ -22,4 +33,18 @@
     background-color: black;
     color: white;
     z-index: 3;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
