--- a/src/main.css
+++ b/src/main.css
@@ -1,50 +1,3 @@
-.container {
-    position: relative;
-    display: inline-block;
-}
-
-.container.loading::after {
-    content: "Scanning Image...";
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    font-size: 4rem;
-    translate: -50% -50%;
-    animation: pulse 1s ease-in-out infinite;
-}
-
-.container>img {
-    opacity: 0.1;
-}
-
-.container>canvas {
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 2;
-}
-
-.container>.tag {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    display: block;
-    padding: 5px;
-    background-color: black;
-    color: white;
-    z-index: 3;
-}
-
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(1.1);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
